# BananaRipenessCREDA

./: .gitignore  README.md  pyproject.toml
.github/workflows/: mlops_engine.yml
configs/: base_experiment.yaml  efficientnet_experiment.yaml  mobilenetv3_experiment .yaml  mobilenetv3_experiment.yaml  resnet_experiment.yaml  vit_experiment.yaml
notebooks/: bananaripeness-exps.ipynb
scripts/: download_data.py  inference.py  train.py
src/banana_creda/: config.py
src/banana_creda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/banana_creda/data/: loader.py
src/banana_creda/losses/: creda.py
src/banana_creda/models/: backbones.py  resnet.py
src/banana_creda/training/: trainer.py
src/banana_creda/utils/: metrics.py  reproducibility.py  visualizer.py
tests/: config_tests.py  conftest.py  test_losses.py  test_models.py
