[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "banana_creda"
version = "0.1.0"
description = "Domain Adaptation para madurez de bananos usando CREDA"
authors = [{ name = "Lucas Iturriago", email = "liturriago@unal.edu.co" }]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "pydantic>=2.0.0",
    "pyyaml",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "umap-learn",
    "kagglehub",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy"
]

[tool.pytest.ini_options]
# Indica dónde están los tests
testpaths = ["tests"]
# Patrones de búsqueda de archivos y funciones
python_files = "test_*.py"
python_functions = "test_*"
# Argumentos por defecto: -v (verbose), -ra (reporte de todo menos pass)
addopts = "-v -ra"

[tool.setuptools.packages.find]
# Ayuda a setuptools a encontrar tu código en la carpeta src/
where = ["src"]